--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -9,7 +9,7 @@
 </div>
 
 <div>
-  <a href="/delete_student/<%= student.id %>">
+  <a href="/delete_student/<%= @student.id %>">
     Delete student
   </a>
 </div>
@@ -101,12 +101,12 @@
 <hr>
 
 <ul>
-  <% enrollments = Enrollment.where({:student_id => student.id }) %>
+  <% enrollments = Enrollment.where({:student_id => @student.id }) %>
   <% enrollments.each do |enrollment| %>
-    <% course = course.where({ :id => enrollment.course_id }).at(0) %>
+    <% selected_course = Course.where({ :id => enrollment.course_id }).at(0) %>
     <li>
-      <a href="/courses/<%= course.id %>">
-        <%= course.title %>
+      <a href="/courses/<%= selected_course.id %>">
+        <%= selected_course.title %>
       </a>
     </li>
   <% end %>
